bq-training-assignment-terraform/modules/vpc/nat_gateway.tf
resource "aws_eip" "nat_eip" {
  count  = var.subnet_count
  domain = "vpc"
}

resource "aws_nat_gateway" "vpc_nat" {
  count         = var.subnet_count
  subnet_id     = aws_subnet.public_subnet[count.index].id
  allocation_id = aws_eip.nat_eip[count.index].id
  tags = {
    description = "Name your nat gateway"
    Name        = "nat-gateway-${local.az_names[count.index % local.az_count]}-${count.index + 1}"
  }
}
